test new netlify

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -18,7 +18,7 @@ const description = isEN
 const blogPosts = [
   {
     title: 'Съдомиялна не източва София и Варна | Сервиз на място',
-    excerpt: 'Съдомиялна не източва София и Варна: миризма, застояла вода и кога сервиз на място е задължителен.Съдомиялна не източва София и Варна – познато притеснение, когато в машината остава мръсна вода и съдове до горе. Съдомиялна задържа вода и мирише в София или Варна, и изведнъж кухнята спира да работи нормално, а мивката се пълни с чинии.',
+    excerpt: 'Съдомиялна не източва София и Варна: миризма, застояла вода и кога сервиз на място е задължителен.Съдомиялна не източва София и Варна – познато притеснение, когато в машината остава мръсна вода и съдове до горе.',
     slug: 'sadomiyalna-ne-iztochva-sofia-i-varna-serviz-na-myasto',
     image: '/img/blog/remont-na-sudomyalni-varna-serviz-sudomyalna-montazh-sudomyalni-remont-sudomyalna-aktualni-ceni.jpg'
   },
@@ -528,7 +528,7 @@ const blogPosts = [
         overflow: hidden;
         display: -webkit-box;
         -webkit-box-orient: vertical;
-        -webkit-line-clamp: 3;
+        -webkit-line-clamp: 4;
       }
     </style>
     
