--- a/src/pages/blog/sadomiyalna-ne-iztochva-sofia-i-varna-serviz-na-myasto.astro
+++ b/src/pages/blog/sadomiyalna-ne-iztochva-sofia-i-varna-serviz-na-myasto.astro
@@ -60,7 +60,7 @@ const blogImage = '/img/blog/remont-na-sudomyalni-varna-serviz-sudomyalna-montaz
       </div>
       
       <p class="mt-6 opacity-75">
-        Посещение и диагностика: Варна - 30лв (15,34 €) | София - 50лв (25,57 €) • Гаранция за качество • Сервиз във Варна и София
+        Посещение и диагностика: Варна - 30лв (15,34 €) | София - 50лв (25,57 €) • Гаранция за качество • Сервиз в София и Варна
       </p>
     </div>
   </section>
